change book price to int; rework getBooksSortedByAvailability, fix getBooksSortedByName.