@@ -1,8 +1,6 @@
 package com.andersentask.bookshop.services.implementations;
 
 import com.andersentask.bookshop.dtos.BookDTO;
-import com.andersentask.bookshop.entities.Book;
-import com.andersentask.bookshop.enums.BookStatus;
 import com.andersentask.bookshop.mappers.BookMapper;
 import com.andersentask.bookshop.repositories.BookRepository;
 import com.andersentask.bookshop.services.interfaces.BookService;
@@ -10,8 +8,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.Comparator;
-import java.util.Deque;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -30,7 +26,7 @@ public class BookServiceImpl implements BookService {
     public List<BookDTO> getBooksSortedByName() {
         List<BookDTO> books = getAllBooks();
         return books.stream()
-                .sorted(Comparator.comparing(BookDTO::getName))
+                .sorted(Comparator.comparing(x -> x.getName().toLowerCase()))
                 .collect(Collectors.toList());
     }
 
@@ -38,23 +34,16 @@ public class BookServiceImpl implements BookService {
     public List<BookDTO> getBooksSortedByPrice() {
         List<BookDTO> books = getAllBooks();
         return books.stream()
-                .sorted(Comparator.comparingInt(BookDTO::getPrice))
+                .sorted(Comparator.comparing(BookDTO::getPrice))
                 .collect(Collectors.toList());
     }
 
     @Override
     public List<BookDTO> getBooksSortedByAvailability() {
         List<BookDTO> books = getAllBooks();
-        Deque<BookDTO> sortedBooksByAvailability = new LinkedList<>();
-        for (BookDTO book : books) {
-            if (book.getStatus().equals(BookStatus.AVAILABLE)) {
-                sortedBooksByAvailability.addFirst(book);
-            } else {
-                sortedBooksByAvailability.addLast(book);
-            }
-        }
-        return sortedBooksByAvailability.stream()
-                .toList();
+        return books.stream()
+                .sorted(Comparator.comparingInt(x -> x.getStatus().getOrdinal()))
+                .collect(Collectors.toList());
     }
 }
 
